bird_detection/build/log/idf_py_stderr_output_44174
In file included from /Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:410:
/Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /Users/usuario/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /Users/usuario/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1461,
                 from /Users/usuario/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /Users/usuario/esp/projects_tf/person_detection/main/detection_responder.h:22,
                 from /Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:406:
/Users/usuario/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc: In function 'void run_inference(void*)':
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:501:3: error: reference to 'start_time' is ambiguous
  501 |   start_time = esp_timer_get_time();
      |   ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:433:9: note: candidates are: 'int64_t {anonymous}::start_time'
  433 | int64_t start_time = 0;
      |         ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:489:13: note:                 'long long int start_time'
  489 |   long long start_time = 0;
      |             ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:520:52: error: reference to 'start_time' is ambiguous
  520 |     long long total_time = (esp_timer_get_time() - start_time);
      |                                                    ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:433:9: note: candidates are: 'int64_t {anonymous}::start_time'
  433 | int64_t start_time = 0;
      |         ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:489:13: note:                 'long long int start_time'
  489 |   long long start_time = 0;
      |             ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:552:45: error: reference to 'start_time' is ambiguous
  552 |   int64_t total_inference_time = end_time - start_time;
      |                                             ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:433:9: note: candidates are: 'int64_t {anonymous}::start_time'
  433 | int64_t start_time = 0;
      |         ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:489:13: note:                 'long long int start_time'
  489 |   long long start_time = 0;
      |             ^~~~~~~~~~
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc: At global scope:
/Users/usuario/esp/projects_tf/person_detection/main/main_functions.cc:433:9: warning: '{anonymous}::start_time' defined but not used [-Wunused-variable]
  433 | int64_t start_time = 0;
      |         ^~~~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/flash.dir/rule] Error 2
make: *** [flash] Error 2
